<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:visibility="visible"
    tools:context=".ui.profile.ProfileActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ru.skillbranch.devintensive.ui.custom.AspectRatioImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/bg"
            android:scaleType="centerCrop"
            android:src="@drawable/profile_bg"
            app:aspectRatio="1.78" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/spacing_normal_16">

            <ImageButton
                android:id="@+id/btn_switch_theme"
                android:layout_width="@dimen/btn_round_size_40"
                android:layout_height="@dimen/btn_round_size_40"
                android:layout_marginRight="@dimen/spacing_huge_32"
                android:layout_marginTop="36dp"
                android:layout_toLeftOf="@id/iv_avatar"
                android:background="@drawable/btn_round_bg"
                android:src="@drawable/ic_switch_day_night" />

            <ImageButton
                android:id="@+id/btn_edit"
                android:layout_width="@dimen/btn_round_size_40"
                android:layout_height="@dimen/btn_round_size_40"
                android:layout_marginLeft="@dimen/spacing_huge_32"
                android:layout_marginTop="36dp"
                android:layout_toRightOf="@id/iv_avatar"
                android:background="@drawable/btn_round_bg"
                android:src="@drawable/ic_edit_black_24dp" />

            <ImageView
                android:id="@+id/iv_avatar"
                android:layout_width="@dimen/avatar_round_size"
                android:layout_height="@dimen/avatar_round_size"
                android:layout_centerHorizontal="true"
                android:src="@drawable/avatar_default"
                android:visibility="visible" />


            <TextView
                android:id="@+id/iv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_avatar"
                android:layout_centerHorizontal="true"
                android:text="John Doe"
                android:visibility="visible"
                style="@style/Profile.Header.Nickname"/>

            <TextView
                android:id="@+id/iv_rank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_name"
                android:layout_centerHorizontal="true"
                android:text="Junior Android Developer"
                style="@style/Profile.Header.Rank"/>
        </RelativeLayout>

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_primary_light"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            style="@style/Profile.InfoItem">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_sp_24"
                android:fontFamily="sans-serif-medium"
                android:text="0"
                style="@style/Profile.Metrics.Value" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_label_rating"
                style="@style/Profile.Metrics.Label"/>

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginVertical="@dimen/spacing_normal_16"
            android:background="?attr/colorDivider"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            style="@style/Profile.InfoItem">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_respect_24"
                android:text="0"
                style="@style/Profile.Metrics.Value" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_label_respect"
                style="@style/Profile.Metrics.Label"/>

        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Profile.InfoItem">

        <ImageView
            android:id="@+id/ic_avatar"
            android:layout_width="@dimen/btn_round_size_40"
            android:layout_height="@dimen/btn_round_size_40"
            android:src="@drawable/ic_avatar" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/wr_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/ic_avatar"
            android:layout_marginLeft="@dimen/spacing_normal_16">

            <EditText
                android:id="@+id/et_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/profile_hint_first_name"
                style="@style/Profile.EditText"
                android:inputType="textPersonName"
                android:imeOptions="actionDone"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/wr_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/ic_avatar"
            android:layout_marginLeft="@dimen/spacing_normal_16"
            android:layout_below="@+id/wr_first_name">

            <EditText
                android:id="@+id/et_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/profile_hint_last_name"
                style="@style/Profile.EditText"
                android:inputType="textPersonName"
                android:imeOptions="actionDone"/>

        </com.google.android.material.textfield.TextInputLayout>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?attr/colorDivider"
        android:layout_marginLeft="@dimen/space_maximum_72"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="@style/Profile.InfoItem">

        <ImageView
            android:layout_width="@dimen/btn_round_size_40"
            android:layout_height="@dimen/btn_round_size_40"
            android:src="@drawable/ic_about"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/wr_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/spacing_normal_16">

            <EditText
                android:id="@+id/et_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/profile_hint_about"
                style="@style/Profile.EditText.MultiLine"
                android:inputType="textMultiLine"
                android:imeOptions="actionDone"/>

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?attr/colorDivider"
        android:layout_marginLeft="@dimen/space_maximum_72"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="@style/Profile.InfoItem" >

        <ImageView
            android:layout_width="@dimen/btn_round_size_40"
            android:layout_height="@dimen/btn_round_size_40"
            android:src="@drawable/ic_repo"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/wr_repository"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="@dimen/spacing_normal_16">

            <EditText
                android:id="@+id/et_repository"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/profile_hint_repository"
                style="@style/Profile.EditText.Single"
                android:inputType="textUri"
                android:imeOptions="actionDone"/>

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:layout_width="@dimen/spacing_large_24"
            android:layout_height="@dimen/spacing_large_24"
            android:src="@drawable/ic_eye_24dp"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>

</LinearLayout>